17-05-2005 <Qball> <Qball@qballcow.nl>
	* src/libmpd.[c|h]:	Moved the struct MpdObj definition to the .c
	file and typedeffed it in the .h file.. using internall function from
	you're C code will now result in compile errors.
	* src/main.c:		Removed direct usage of MpdObj internals.
	* src/mpdinteraction.c:	Removed direct usage of MpdObj internals.
	* src/player.c:		'\n' in window title is now replaced by a dash
	'-'
15-05-2005 <Qball> <Qball@qballcow.nl>	
	* doc/libmpd.tex:	Documentation file for libmpd.. (type
	latex2html for nice manual)
	* src/player.c:		Remove breakline from window title
	* src/player.c:		Don't scroll on multiline title.
	* src/preferences.c:	removed some printf stuff.

08-05-2005 <Qball> <Qball@qballcow.nl>
	* po/fr.po:		updated translation.
	* src/libmpd.[c|h]:	playlist_Changed_function now accepts a
	parameter;
	* src/libmpd.c:		playlist_changed_pointer and error_pointer now
	initialized to NULL

04-05-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	If playlist get changed update total time.
	* src/playlist3.c:	You can now get id3 info of selected song in
	playlist search.
	* src/playlist3.c:	Right mouse menu playlist search
	* src/main.c:		Error disables autoconnect. (bug 0422)
	* src/main.c:		Changed stock icons for
	play/pause/stop/prev/next to gtk+-2.6 names. so they should be
	skinned. (bug 0423)
	* src/player.c:		changed stock to new name.
	* src/tray-icon.c:	changed stock to new name.

30-04-2005 Qball <Qball@qballcow.nl>
	* src/libmpd.[c|h]:	Support for stats. (total
	songs,artists,albums,uptime,playtime)
	* glade/gmpc.glade:	Added server stats
	* glade/id3_info.c:	Length shows elapsed time when showing playing
	song.
	* glade/gmpc.glade:	in the id3_window_info changed all entries to
	labels and added severall options.
	* src/id3_info.c:	Added support for genre, composer,path and
	bitrate (live updating)
	* src/strfsong.c:	Added support for genre and composer.
	* src/strfsong.c:	f.e. if no title %title% is never shown.